Fix news item alignment

--- a/src/components/pages/news/NewsItem.module.scss
+++ b/src/components/pages/news/NewsItem.module.scss
@@ -67,6 +67,7 @@
       @include font-desktop-txt-regular;
 
       display: flex;
+      align-items: center;
       margin-top: 24px;
       gap: 5px;
 
@@ -84,6 +85,7 @@
 
       @include mobile {
         flex-direction: column;
+        align-items: flex-start;
         margin-top: 12px;
       }
     }
